Mudança de fonte antiga (Floane) pra Quentell e tentativa de um novo mapa do vilarejo do Robson

--- a/fonts/gamefont.css
+++ b/fonts/gamefont.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: GameFont;
-    src: url("Floane-Regular.otf");
+    src: url("QuentellCFSemiBold-Regular.ttf");
 }
 
 .IIV::-webkit-media-controls-play-button,
